src/test/ui/typeck/issue-84893.stderr
error[E0369]: binary operation `==` cannot be applied to type `MyHashSet<T>`
  --> $DIR/issue-84893.rs:21:16
   |
LL |         self.0 == other.0
   |         ------ ^^ ------- MyHashSet<T>
   |         |
   |         MyHashSet<T>
   |
   = note: the trait `std::cmp::PartialEq` is not implemented for `MyHashSet<T>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
